banco de dados - criando primeiras migrations

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,11 @@
 {
   "extends": [
     "@rocketseat/eslint-config/node"
-  ]
+  ],
+  "rules": {
+    "prettier/prettier": {
+      "singleQuote": true,
+      "parser": "flow"
+    }
+  }
 }
