Restringindo ação do eslint

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,13 @@
+# Dependencias
 node_modules
 testando.http
-db/app.db
-db/test.db
+
+# Database
+db/*.db
+
+# Environment
 .env
 .env.test
+
+# Build
+build
